interpreter/src/commonMain/kotlin/io/github/ehlyzov/branchline/Parser.kt
package io.github.ehlyzov.branchline

import io.github.ehlyzov.branchline.runtime.bignum.blBigDecOfDouble
import io.github.ehlyzov.branchline.runtime.bignum.blBigDecOfLong
import io.github.ehlyzov.branchline.runtime.bignum.blBigDecParse
import io.github.ehlyzov.branchline.runtime.bignum.blBigIntOfLong
import io.github.ehlyzov.branchline.runtime.bignum.blBigIntParse
import io.github.ehlyzov.branchline.runtime.bignum.toBLBigDec
import io.github.ehlyzov.branchline.runtime.bignum.toDouble

class ParseException(msg: String, val token: Token, val snippet: String? = null) :
    RuntimeException(
        "[${token.line}:${token.column}] $msg near '${token.lexeme}'" +
            (snippet?.let { "\n$it" } ?: "")
    )

object NumOps {
    fun isIntegral(n: NumValue) = n !is Dec && n !is F64

    /** Снимает обёртку в Any-число нативного типа. */
    fun unwrap(n: NumValue): Any = when (n) {
        is I32 -> n.v
        is I64 -> n.v
        is F64 -> n.v
        is IBig -> n.v
        is Dec -> n.v
    }

    fun promote(a: NumValue, b: NumValue): Pair<NumValue, NumValue> {
        // пример политики: I32->I64->IBig->Dec
        val rank = when (a) {
            is Dec -> 4
            is F64 -> 3
            is IBig -> 2
            is I64 -> 1
            is I32 -> 0
        }.coerceAtLeast(
            when (b) {
                is Dec -> 4
                is F64 -> 3
                is IBig -> 2
                is I64 -> 1
                is I32 -> 0
            }
        )

        fun lift(x: NumValue): NumValue = when (rank) {
            4 -> when (x) {
                is Dec -> x
                is F64 -> Dec(blBigDecOfDouble(x.v))
                is IBig -> Dec(blBigDecParse(x.v.toString()))
                is I64 -> Dec(blBigDecOfLong(x.v))
                is I32 -> Dec(blBigDecOfLong(x.v.toLong()))
            }

            3 -> when (x) {
                is Dec -> x
                is F64 -> x
                is IBig -> F64(x.v.toBLBigDec().toDouble())
                is I64 -> F64(x.v.toDouble())
                is I32 -> F64(x.v.toDouble())
            }

            2 -> when (x) {
                is Dec -> x // не опускаем
                is F64 -> x
                is IBig -> x
                is I64 -> IBig(blBigIntOfLong(x.v))
                is I32 -> IBig(blBigIntOfLong(x.v.toLong()))
            }

            1 -> when (x) {
                is Dec -> x
                is F64 -> x
                is IBig -> x // не опускаем BLBigInt
                is I64 -> x
                is I32 -> I64(x.v.toLong())
            }

            else -> x
        }
        return lift(a) to lift(b)
    }
}

class Parser(tokens: List<Token>, private val source: String? = null) {
    private companion object {
        private val SOFT_KEYWORD_TYPES: Set<TokenType> = setOf(
            TokenType.ABORT,
            TokenType.APPEND,
            TokenType.AS,
            TokenType.BACKOFF,
            TokenType.BUFFER,
            TokenType.CALL,
            TokenType.ENUM,
            TokenType.FOREACH,
            TokenType.FUNC,
            TokenType.LET,
            TokenType.MANY,
            TokenType.MODIFY,
            TokenType.OPTIONS,
            TokenType.OUTPUT,
            TokenType.RETRY,
            TokenType.RETURN,
            TokenType.SET,
            TokenType.SHARED,
            TokenType.SINGLE,
            TokenType.THROW,
            TokenType.TIMES,
            TokenType.TRANSFORM,
            TokenType.TYPE,
            TokenType.UNION,
            TokenType.USING,
        )
    }

    private val toks = tokens
    private var current = 0

    fun parse(): Program {
        // Версию пока не парсим: она приходит строкой-комментарием // branchline 0.2
        val version: VersionDecl? = null
        val decls = mutableListOf<TopLevelDecl>()
        while (!isAtEnd()) {
            when {
                check(TokenType.TRANSFORM) -> decls += parseTransform()
                check(TokenType.SHARED) -> decls += parseShared()
                check(TokenType.FUNC) -> decls += parseFunc()
                check(TokenType.TYPE) -> decls += parseType()
                check(TokenType.EOF) -> break
                else -> error(peek(), "Unexpected token at top-level")
            }
        }
        consume(TokenType.EOF, "Expect end of file")
        return Program(version, decls)
    }

    // ------------------- top‑level parsers --------------------------

    private fun parseTransform(): TransformDecl {
        val start = advance() // TRANSFORM
        val nameTok = if (checkName() && !check(TokenType.OPTIONS)) advance() else null

        val params = mutableListOf<String>()
        var signature: TransformSignature? = null
        if (match(TokenType.LEFT_PAREN)) {
            val sigStart = previous()
            val paramTypes = mutableListOf<TransformParam>()
            if (!check(TokenType.RIGHT_PAREN)) {
                do {
                    val paramTok = consumeName("Expect parameter name in transform signature")
                    consume(TokenType.COLON, "Expect ':' after transform parameter name")
                    val paramType = parseTypeExpr()
                    params += paramTok.lexeme
                    paramTypes += TransformParam(paramTok.lexeme, paramType, paramTok)
                } while (match(TokenType.COMMA))
            }
            consume(TokenType.RIGHT_PAREN, "Expect ')' after transform signature parameters")
            consume(TokenType.ARROW, "Expect '->' after transform signature")
            val outputType = parseTypeExpr()
            val sigEnd = previous()
            val inputType = when (paramTypes.size) {
                0 -> null
                1 -> paramTypes.first().type
                else -> RecordTypeRef(
                    fields = paramTypes.map { param ->
                        RecordFieldType(
                            name = param.name,
                            type = param.type,
                            optional = false,
                            token = param.token,
                        )
                    },
                    token = paramTypes.first().token,
                )
            }
            signature = TransformSignature(
                input = inputType,
                output = outputType,
                tokenSpan = TokenSpan(sigStart, sigEnd),
            )
        }

        val options = if (match(TokenType.OPTIONS)) parseTransformOptions(previous()) else TransformOptions()

        val body: TransformBody = parseBlock()

        return TransformDecl(nameTok?.lexeme, params, signature, options, body, start)
    }

    private fun parseAdapter(): AdapterSpec {
        return parseAdapterSpec("Expect adapter name after USING")
    }

    private fun parseAdapterSpec(message: String): AdapterSpec {
        val nameTok = consumeName(message)
        val args = mutableListOf<Expr>()
        if (match(TokenType.LEFT_PAREN)) {
            if (!check(TokenType.RIGHT_PAREN)) {
                do {
                    args += parseExpression()
                } while (match(TokenType.COMMA))
            }
            consume(TokenType.RIGHT_PAREN, "Expect ')' after adapter args")
        }
        return AdapterSpec(nameTok.lexeme, args, nameTok)
    }

    private fun parseTransformOptions(optionsToken: Token): TransformOptions {
        consume(TokenType.LEFT_BRACE, "Expect '{' after OPTIONS")
        var mode: Mode = Mode.BUFFER
        var inputAdapter: AdapterSpec? = null
        var outputAdapter: AdapterSpec? = null
        val sharedDecls = mutableListOf<SharedDecl>()
        val seen = mutableSetOf<String>()
        while (!check(TokenType.RIGHT_BRACE) && !isAtEnd()) {
            val keyTok = consumeName("Expect option name in OPTIONS block")
            val key = keyTok.lexeme.lowercase()
            if (!seen.add(key)) {
                error(keyTok, "Duplicate OPTIONS entry '$key'")
            }
            consume(TokenType.COLON, "Expect ':' after option name")
            when (key) {
                "mode" -> mode = parseModeOption()
                "input" -> inputAdapter = parseAdapterBlock("input")
                "output" -> outputAdapter = parseAdapterBlock("output")
                "shared" -> sharedDecls.addAll(parseSharedOptionList())
                else -> error(keyTok, "Unknown OPTIONS entry '$key'")
            }
            consumeOptionsSeparator(TokenType.RIGHT_BRACE)
        }
        consume(TokenType.RIGHT_BRACE, "Expect '}' after OPTIONS block")
        return TransformOptions(
            mode = mode,
            inputAdapter = inputAdapter,
            outputAdapter = outputAdapter,
            shared = sharedDecls,
            token = optionsToken,
        )
    }

    private fun parseModeOption(): Mode {
        val valueTok = consumeName("Expect mode value after 'mode:'")
        return when (valueTok.lexeme.lowercase()) {
            "buffer" -> Mode.BUFFER
            "stream" -> error(valueTok, "STREAM mode is not supported. Use 'buffer'.")
            else -> error(valueTok, "Expect 'buffer' after 'mode:'")
        }
    }

    private fun parseAdapterBlock(label: String): AdapterSpec? {
        consume(TokenType.LEFT_BRACE, "Expect '{' after $label option")
        var adapter: AdapterSpec? = null
        val seen = mutableSetOf<String>()
        while (!check(TokenType.RIGHT_BRACE) && !isAtEnd()) {
            val keyTok = consumeName("Expect option field in $label block")
            val key = keyTok.lexeme.lowercase()
            if (!seen.add(key)) {
                error(keyTok, "Duplicate $label option '$key'")
            }
            consume(TokenType.COLON, "Expect ':' after $label option field")
            when (key) {
                "adapter" -> adapter = parseAdapterSpec("Expect adapter name in $label option")
                else -> error(keyTok, "Unknown $label option '$key'")
            }
            consumeOptionsSeparator(TokenType.RIGHT_BRACE)
        }
        consume(TokenType.RIGHT_BRACE, "Expect '}' after $label option")
        return adapter
    }

    private fun parseSharedOptionList(): List<SharedDecl> {
        consume(TokenType.LEFT_BRACKET, "Expect '[' after shared option")
        val sharedDecls = mutableListOf<SharedDecl>()
        while (!check(TokenType.RIGHT_BRACKET) && !isAtEnd()) {
            val nameTok = consumeName("Expect shared resource name")
            val kind = when {
                match(TokenType.SINGLE) -> SharedKind.SINGLE
                match(TokenType.MANY) -> SharedKind.MANY
                else -> error(peek(), "Expect SINGLE or MANY after shared name")
            }
            sharedDecls += SharedDecl(nameTok.lexeme, kind, nameTok)
            consumeOptionsSeparator(TokenType.RIGHT_BRACKET)
        }
        consume(TokenType.RIGHT_BRACKET, "Expect ']' after shared list")
        return sharedDecls
    }

    private fun consumeOptionsSeparator(terminator: TokenType) {
        if (match(TokenType.COMMA)) return
        if (match(TokenType.SEMICOLON)) return
        val next = peek()
        if (next.type == terminator) return
        if (next.line != previous().line) return
        error(next, "Expect ',' or newline between options")
    }

    // --------------------------------------------------------------------
    // SHARED cache SINGLE ;
    private fun parseShared(): SharedDecl {
        val sharedTok = consume(TokenType.SHARED, "Expect 'SHARED'.")
        val nameTok = consumeName("Expect shared memory name.")

        val kind = when {
            match(TokenType.SINGLE) -> SharedKind.SINGLE
            match(TokenType.MANY) -> SharedKind.MANY
            else -> error(peek(), "Expect SINGLE or MANY after shared name")
        }
        optionalSemicolon()
        return SharedDecl(nameTok.lexeme, kind, sharedTok)
    }

    // --------------------------------------------------------------------
    // FUNC newId(prefix) = expr ;     |     FUNC sum(a,b) { … }
    private fun parseFunc(): FuncDecl {
        val funcTok = consume(TokenType.FUNC, "Expect 'FUNC'.")
        val nameTok = consumeName("Expect function name.")

        // ( param, … )
        consume(TokenType.LEFT_PAREN, "Expect '(' after function name.")
        val params = mutableListOf<String>()
        if (!check(TokenType.RIGHT_PAREN)) {
            do {
                params += consumeName("Expect parameter name.").lexeme
            } while (match(TokenType.COMMA))
        }
        consume(TokenType.RIGHT_PAREN, "Expect ')' after parameters.")

        // тело:  '=' expr ';'   ИЛИ   блок '{ … }'
        val body: FuncBody = if (match(TokenType.ASSIGN)) {
            val expr = parseExpression()
            optionalSemicolon()
            ExprBody(expr, funcTok)
        } else {
            val block = parseBlock() // parseBlock съедает '{ … }'
            BlockBody(block, funcTok)
        }

        return FuncDecl(nameTok.lexeme, params, body, funcTok)
    }

    // --------------------------------------------------------------------
    // TYPE Color = enum { RED, GREEN } ;     |     TYPE Id = union String | Number ;
    private fun parseType(): TypeDecl {
        val typeTok = consume(TokenType.TYPE, "Expect 'TYPE'.")
        val nameTok = consumeName("Expect type name.")
        consume(TokenType.ASSIGN, "Expect '=' after type name.")

        val defs = mutableListOf<String>()
        val kind: TypeKind = when {
            match(TokenType.ENUM) -> {
                consume(TokenType.LEFT_BRACE, "Expect '{' after 'enum'.")
                do {
                    defs += consumeName("Expect enum label.").lexeme
                } while (match(TokenType.COMMA))
                consume(TokenType.RIGHT_BRACE, "Expect '}' after enum body.")
                TypeKind.ENUM
            }

            match(TokenType.UNION) -> {
                // последовательно <Ident> ( '|' <Ident> )*
                do {
                    defs += consumeName("Expect union member type.").lexeme
                } while (match(TokenType.PIPE))
                TypeKind.UNION
            }

            else -> error(peek(), "Expect 'enum' or 'union' after '='")
        }

        optionalSemicolon()
        return TypeDecl(nameTok.lexeme, kind, defs, typeTok)
    }

    private data class TransformParam(
        val name: String,
        val type: TypeRef,
        val token: Token,
    )

    private fun parseTypeExpr(): TypeRef {
        val first = parseTypeTerm()
        val members = mutableListOf(first)
        while (match(TokenType.PIPE)) {
            members += parseTypeTerm()
        }
        return if (members.size == 1) {
            first
        } else {
            UnionTypeRef(members, first.token)
        }
    }

    private fun parseTypeTerm(): TypeRef {
        val term = when {
            check(TokenType.ENUM) && checkNext(TokenType.LEFT_BRACE) -> {
                advance()
                parseEnumType(previous())
            }
            match(TokenType.LEFT_BRACE) -> parseRecordType(previous())
            match(TokenType.LEFT_BRACKET) -> parseListType(previous())
            check(TokenType.SET) && checkNext(TokenType.LT) -> {
                advance()
                parseSetType(previous())
            }
            matchName() -> parseSimpleType(previous())
            else -> error(peek(), "Expect type")
        }
        if (!match(TokenType.QUESTION)) {
            return term
        }
        return makeNullableTypeRef(term)
    }

    private fun makeNullableTypeRef(typeRef: TypeRef): TypeRef {
        if (typeRef is PrimitiveTypeRef && typeRef.kind == PrimitiveType.ANY && typeRef.token.lexeme == "_") {
            return PrimitiveTypeRef(PrimitiveType.ANY_NULLABLE, typeRef.token)
        }
        if (typeRef is PrimitiveTypeRef && typeRef.kind == PrimitiveType.NULL) {
            return typeRef
        }
        val nullType = PrimitiveTypeRef(PrimitiveType.NULL, typeRef.token)
        if (typeRef is UnionTypeRef) {
            if (typeRef.members.any { member -> member is PrimitiveTypeRef && member.kind == PrimitiveType.NULL }) {
                return typeRef
            }
            return UnionTypeRef(typeRef.members + nullType, typeRef.token)
        }
        return UnionTypeRef(listOf(typeRef, nullType), typeRef.token)
    }

    private fun parseEnumType(start: Token): TypeRef {
        consume(TokenType.LEFT_BRACE, "Expect '{' after enum")
        val values = mutableListOf<String>()
        if (!check(TokenType.RIGHT_BRACE)) {
            while (true) {
                val valueTok = consumeName("Expect enum value")
                values += valueTok.lexeme
                if (!match(TokenType.COMMA)) break
                if (check(TokenType.RIGHT_BRACE)) break
            }
        }
        consume(TokenType.RIGHT_BRACE, "Expect '}' after enum")
        return EnumTypeRef(values, start)
    }

    private fun parseRecordType(start: Token): TypeRef {
        val fields = mutableListOf<RecordFieldType>()
        if (!check(TokenType.RIGHT_BRACE)) {
            while (true) {
                val fieldTok = consumeName("Expect record field name")
                val optional = match(TokenType.QUESTION)
                consume(TokenType.COLON, "Expect ':' after record field name")
                val fieldType = parseTypeExpr()
                fields += RecordFieldType(
                    name = fieldTok.lexeme,
                    type = fieldType,
                    optional = optional,
                    token = fieldTok,
                )
                if (!match(TokenType.COMMA)) break
                if (check(TokenType.RIGHT_BRACE)) break
            }
        }
        consume(TokenType.RIGHT_BRACE, "Expect '}' after record type")
        return RecordTypeRef(fields, start)
    }

    private fun parseListType(start: Token): TypeRef {
        val elementType = parseTypeExpr()
        consume(TokenType.RIGHT_BRACKET, "Expect ']' after list type")
        return ArrayTypeRef(elementType, start)
    }

    private fun parseSetType(start: Token): TypeRef {
        consume(TokenType.LT, "Expect '<' after set")
        val elementType = parseTypeExpr()
        consume(TokenType.GT, "Expect '>' after set type")
        return SetTypeRef(elementType, start)
    }

    private fun parseSimpleType(typeTok: Token): TypeRef {
        val normalized = typeTok.lexeme.lowercase()
        return when (typeTok.lexeme) {
            "_" -> PrimitiveTypeRef(PrimitiveType.ANY, typeTok)

            else -> when (normalized) {
                "string", "text" -> PrimitiveTypeRef(PrimitiveType.TEXT, typeTok)
                "bytes" -> PrimitiveTypeRef(PrimitiveType.BYTES, typeTok)
                "number" -> PrimitiveTypeRef(PrimitiveType.NUMBER, typeTok)
                "boolean" -> PrimitiveTypeRef(PrimitiveType.BOOLEAN, typeTok)
                "null" -> PrimitiveTypeRef(PrimitiveType.NULL, typeTok)
                "any" -> PrimitiveTypeRef(PrimitiveType.ANY, typeTok)
                else -> NamedTypeRef(typeTok.lexeme, typeTok)
            }
        }
    }

    // ------------------- statements & block -------------------------

    private fun parseBlock(): CodeBlock {
        val lbrace = consume(TokenType.LEFT_BRACE, "Expect '{' to start block")
        val stmts = mutableListOf<Stmt>()
        while (!check(TokenType.RIGHT_BRACE) && !isAtEnd()) {
            stmts += parseStatement()
        }
        consume(TokenType.RIGHT_BRACE, "Expect '}' after block")
        return CodeBlock(stmts, lbrace)
    }

    private fun parseStatement(): Stmt {
        return when {
            match(TokenType.LET) -> parseLet()
            match(TokenType.MODIFY) -> parseModify()
            match(TokenType.SET) -> parseSet()
            match(TokenType.OUTPUT) -> parseOutputStmt()
            match(TokenType.IF) -> parseIf(previous())
            match(TokenType.FOR) -> parseForEach(previous())
            match(TokenType.TRY) -> parseTryCatch(previous())
            match(TokenType.RETURN) -> parseReturn()
            match(TokenType.ABORT) -> parseAbort()
            isSharedWriteStart() -> parseSharedWrite()
            else -> {
                val start = peek()
                val expr = parseExpression()
                if (match(TokenType.PLUS_ASSIGN)) {
                    val value = parseExpression()
                    optionalSemicolon()
                    return when (expr) {
                        is IdentifierExpr -> PlusAssignVarStmt(expr.name, value, start)
                        is AccessExpr -> PlusAssignStmt(expr, value, start)
                        else -> error(start, "'+=' target must be identifier or path")
                    }
                }
                optionalSemicolon()
                ExprStmt(expr, start)
            }
        }
    }

    // --------------- внутри Parser -----------------

    private fun parseLet(): LetStmt {
        val nameTok = consumeName("Expect identifier after LET")
        consume(TokenType.ASSIGN, "Expect '=' in LET statement")
        val expr = parseExpression()
        optionalSemicolon()
        return LetStmt(nameTok.lexeme, expr, nameTok)
    }

    private fun isSharedWriteStart(): Boolean {
        if (!checkName() || !checkNext(TokenType.LEFT_BRACKET)) return false
        var idx = current + 2
        var depth = 1
        while (idx < toks.size) {
            val tok = toks[idx]
            when (tok.type) {
                TokenType.LEFT_BRACKET -> depth += 1
                TokenType.RIGHT_BRACKET -> {
                    depth -= 1
                    if (depth == 0) {
                        return toks.getOrNull(idx + 1)?.type == TokenType.ASSIGN
                    }
                }
                TokenType.EOF -> return false
                else -> Unit
            }
            idx += 1
        }
        return false
    }

    private fun parseSharedWrite(): SharedWriteStmt {
        val nameTok = consumeName("Expect shared resource name")
        consume(TokenType.LEFT_BRACKET, "Expect '[' after shared resource name")
        val keyExpr = if (check(TokenType.RIGHT_BRACKET)) null else parseExpression()
        consume(TokenType.RIGHT_BRACKET, "Expect ']' after shared key")
        consume(TokenType.ASSIGN, "Expect '=' after shared key")
        val valueExpr = parseExpression()
        optionalSemicolon()
        return SharedWriteStmt(nameTok.lexeme, keyExpr, valueExpr, nameTok)
    }

    private fun parseModify(): ModifyStmt {
        // Цель — статический путь: IdentifierExpr или PathExpr (без IndexExpr)
        val targetExpr = parsePrimaryPostfix()
        val targetPath: AccessExpr = when (targetExpr) {
            is IdentifierExpr -> AccessExpr(targetExpr, emptyList(), targetExpr.token)
            is AccessExpr -> targetExpr
            else -> error(
                previous(),
                "Expect static object path after MODIFY (identifier or dotted path without '[ ]')"
            )
        }
        check(targetPath.segs.all { it is AccessSeg.Static }) {
            "Expect static object path after MODIFY (identifier or dotted path without '[ ]')"
        }

        val lbrace = consume(TokenType.LEFT_BRACE, "Expect '{' after MODIFY target")
        val updates = mutableListOf<Property>()

        if (!check(TokenType.RIGHT_BRACE)) {
            do {
                when {
                    // a) computed property: [expr] : expr
                    match(TokenType.LEFT_BRACKET) -> {
                        val keyExpr = parseExpression()
                        consume(TokenType.RIGHT_BRACKET, "Expect ']' after computed property name")
                        consume(TokenType.COLON, "Expect ':' after computed property name")
                        val valueExpr = parseExpression()
                        updates += ComputedProperty(keyExpr, valueExpr)
                    }
                    // b) literal property: NAME | STRING | NUMBER : expr
                    else -> {
                        val keyTok = when {
                            match(TokenType.STRING) -> previous()
                            matchName() -> previous()
                            match(TokenType.NUMBER) -> previous()
                            // дружелюбная ошибка для отрицательных числовых ключей
                            check(TokenType.MINUS) -> {
                                advance()
                                val nTok = consume(
                                    TokenType.NUMBER,
                                    "Numeric field key must be a non-negative integer"
                                )
                                error(
                                    nTok,
                                    "Numeric field key must be a non-negative integer, got '-${nTok.lexeme}'"
                                )
                            }

                            else -> error(peek(), "Expect field key in MODIFY")
                        }

                        val key: ObjKey = when {
                            keyTok.type == TokenType.STRING -> ObjKey.Name(keyTok.lexeme.trim('"'))
                            keyTok.type == TokenType.NUMBER -> parseIntKey(keyTok.lexeme) // I32/I64/IBig
                            isNameType(keyTok.type) -> ObjKey.Name(keyTok.lexeme)
                            else -> error(keyTok, "Invalid field key in MODIFY")
                        }

                        consume(TokenType.COLON, "Expect ':' after field key")
                        val valueExpr = parseExpression()
                        updates += LiteralProperty(key, valueExpr)
                    }
                }
            } while (match(TokenType.COMMA) || match(TokenType.SEMICOLON))
        }

        consume(TokenType.RIGHT_BRACE, "Expect '}' after MODIFY block")
        optionalSemicolon()
        return ModifyStmt(targetPath, updates, lbrace)
    }

    private fun parseSet(): Stmt {
        val start = previous() // 'SET'
        val target = parsePrimaryPostfix()
        consume(TokenType.ASSIGN, "Expect '=' after SET target")
        val value = parseExpression()
        optionalSemicolon()
        return when (target) {
            is IdentifierExpr -> SetVarStmt(target.name, value, start)
            is AccessExpr -> SetStmt(target, value, start)
            else -> error(start, "SET target must be identifier or path")
        }
    }

    private fun parseOutputStmt(): OutputStmt {
        val outTok = previous()
        val template = parseExpression()
        // optional semicolon in example omitted inside transform
        if (match(TokenType.SEMICOLON)) {
            // consume semicolon
        }
        return OutputStmt(template, outTok)
    }

    // IF / ELSE -------------------------------------------------------
    private fun parseIf(ifTok: Token): IfStmt {
        val condition = parseExpression()
        consume(TokenType.THEN, "Expect THEN after IF condition")
        val thenBlock = parseBlock()
        val elseBlock = if (match(TokenType.ELSE)) parseBlock() else null
        return IfStmt(condition, thenBlock, elseBlock, ifTok)
    }

    // FOR EACH --------------------------------------------------------
    private fun parseForEach(forTok: Token): ForEachStmt {
        match(TokenType.EACH)
        val varTok = consumeName("Expect loop variable name")
        consume(TokenType.IN, "Expect IN after loop variable")
        val iterable = parseExpression()
        val whereExpr = if (match(TokenType.WHERE)) parseExpression() else null
        val body = parseBlock()
        return ForEachStmt(
            varName = varTok.lexeme,
            iterable = iterable,
            body = body,
            where = whereExpr,
            token = forTok
        )
    }

    // TRY / CATCH -----------------------------------------------------
    private data class TryCatchParts(
        val tryExpr: Expr,
        val exceptionName: String,
        val retry: Int?,
        val backoff: String?,
    )
